# SWIO

./: .gitmodules  CMakeLists.txt
src/: swio.F90  swio_methods.F90
